--- a/index.html
+++ b/index.html
@@ -476,7 +476,13 @@
             <section class="section-form">
                 <div class="form">
                     <div class="form-title">
-                        <p>Расскажите<br>о своем проекте</p>
+                        <svg class="circle circle-form"  viewBox="0 0 253 253" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="126.5" cy="126.5" r="126.5"/>
+                        </svg>
+                        <svg class="triangle-form" width="66" height="72" viewBox="0 0 66 72" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M33 0L65.909 71.25H0.0910339L33 0Z"/>
+                        </svg>
+                        <p class="tell-about">Расскажите<br>о своем проекте</p>
                     </div>
                     <div class="form-description">
                         <p>Воспользуйтесь формой обратной связи, чтобы обсудить ваш проект, заполните все поля, и я свяжусь<br>с вами в ближайшее время</p>
@@ -521,7 +527,7 @@
                 </div>
                 <div class="footer-bottom">
                     <p>&copy;2020, Все права защищены</p>
-                    <p>Сделано в рамках курса учебной платформы <a href="">Frontend Blok</a></p>
+                    <p>Сделано в рамках курса учебной платформы <a class="footer-link" href="">Frontend Blok</a></p>
                 </div>
             </footer>
         </div>  
